[package]
name = "lfmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["json", "blocking"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
